[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-ratelimit-middleware"
version = "0.1.0"
description = "A simple Django middleware for rate limiting by IP or user"
authors = [{name="Bryan Donnelly", email="bryandonnelly7@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "Django>=5.1"
]

[project.urls]
Homepage = "https://github.com/k3y5tr0k3/django-ratelimit-middleware"