[metadata]
name = django-ratelimit-middleware
version = 0.1.0-beta
description = Simple rate limiting middleware for Django
long_description = file: README.md
long_description_content_type = text/markdown
author = Bryan Donnelly
url = https://github.com/k3y5tr0k3/django-ratelimit-middleware

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.12
install_requires =
    Django>=5.1

[options.packages.find]
where = src

[tool.setuptools]
license-files = LICENSE